configured swagger successfully
